--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,16 +19,13 @@ jobs:
         NGROK_AUTH_TOKEN: ${{ secrets.NGROK_AUTH_TOKEN }}
     
     - name: Install Chocolatey
-      run: Set-ExecutionPolicy Bypass -Scope Process -Force; [System.Net.ServicePointManager]::SecurityProtocol = [System.Net.ServicePointManager]::SecurityProtocol -bor 3072; iex ((New-Object System.Net.WebClient).DownloadString('https://chocolatey.org/install.ps1'))
+      run: |
+        Set-ExecutionPolicy Bypass -Scope Process -Force
+        [System.Net.ServicePointManager]::SecurityProtocol = [System.Net.ServicePointManager]::SecurityProtocol -bor 3072
+        iex ((New-Object System.Net.WebClient).DownloadString('https://chocolatey.org/install.ps1'))
 
     - name: Install Google Chrome
       run: choco install googlechrome -y
-
-    - name: Download Chrome Remote Desktop
-      run: Invoke-WebRequest https://dl.google.com/chrome-remote-desktop/chrome-remote-desktop-host.msi -OutFile chrome-remote-desktop-host.msi
-
-    - name: Install Chrome Remote Desktop
-      run: msiexec /i chrome-remote-desktop-host.msi /qn
 
     - name: Enable Remote Desktop
       run: |
@@ -37,9 +34,18 @@ jobs:
         Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server\WinStations\RDP-Tcp' -Name "UserAuthentication" -Value 1
         Set-LocalUser -Name "runneradmin" -Password (ConvertTo-SecureString -AsPlainText "P@ssw0rd!" -Force)
     
+    - name: Download Chrome Remote Desktop
+      run: Invoke-WebRequest https://dl.google.com/tag/s/appguid%3D%7B8A69D345-D564-463C-AFF1-A69D9E530F96%7D%26iid%3D%7B9F4D3D7A-1D7A-2D52-8B20-3C6D9ED5A00E%7D%26lang%3Den%26browser%3D4%26usagestats%3D0%26appname%3DChrome%2520Remote%2520Desktop%26needsadmin%3Dtrue%26ap%3Dx64-stable%26installdataindex%3Ddefaultbrowser/update2/installers/ChromeRemoteDesktopSetup64.msi -OutFile ChromeRemoteDesktopSetup64.msi
+
+    - name: Install Chrome Remote Desktop
+      run: msiexec /i ChromeRemoteDesktopSetup64.msi /qn
+    
     - name: Start Chrome Remote Desktop
+      continue-on-error: true
       run: |
-        & "C:\Program Files\Google\Chrome Remote Desktop\CurrentVersion\remoting_start_host.exe" --code="$Env:CHROME_REMOTE_DESKTOP_CODE" --redirect-url="https://remotedesktop.google.com/_/oauthredirect" --name="GitHubActionsRunner"
+        $ErrorActionPreference = "Stop"
+        $secret = "${{ secrets.CHROME_REMOTE_DESKTOP_CODE }}"
+        & "C:\Program Files\Google\Chrome Remote Desktop\CurrentVersion\remoting_start_host.exe" --code=$secret --redirect-url="https://remotedesktop.google.com/_/oauthredirect" --name="GitHubActionsRunner"
       env:
         CHROME_REMOTE_DESKTOP_CODE: ${{ secrets.CHROME_REMOTE_DESKTOP_CODE }}
 
