--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,6 +33,9 @@ jobs:
     - name: Install Chrome Remote Desktop
       run: msiexec /i chromeremotedesktophost.msi /qn
 
+    - name: Verify Chrome Remote Desktop Installation
+      run: Get-ChildItem -Recurse "C:\Program Files (x86)\Google\Chrome Remote Desktop\CurrentVersion"
+
     - name: Enable Remote Desktop
       run: |
         Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server' -Name "fDenyTSConnections" -Value 0
