--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,12 +17,15 @@ jobs:
       run: .\ngrok\ngrok.exe authtoken $Env:NGROK_AUTH_TOKEN
       env:
         NGROK_AUTH_TOKEN: ${{ secrets.NGROK_AUTH_TOKEN }}
-    
+
     - name: Install Chocolatey
       run: |
         Set-ExecutionPolicy Bypass -Scope Process -Force
         [System.Net.ServicePointManager]::SecurityProtocol = [System.Net.ServicePointManager]::SecurityProtocol -bor 3072
         iex ((New-Object System.Net.WebClient).DownloadString('https://chocolatey.org/install.ps1'))
+
+    - name: Install 7zip
+      run: choco install 7zip -y
 
     - name: Install Google Chrome
       run: choco install googlechrome -y --ignore-checksums
@@ -31,7 +34,7 @@ jobs:
       run: Invoke-WebRequest https://github.com/Srimadesh167/rdp/raw/main/133.0.6943.7.zip -OutFile chrome-remote-desktop.zip
 
     - name: Extract Chrome Remote Desktop
-      run: Expand-Archive chrome-remote-desktop.zip -DestinationPath "C:\Program Files (x86)\Google\Chrome Remote Desktop"
+      run: & "C:\Program Files\7-Zip\7z.exe" x chrome-remote-desktop.zip -o"C:\Program Files (x86)\Google\Chrome Remote Desktop"
 
     - name: Enable Remote Desktop
       run: |
