--- a/.github/workflows/windows 10 rust.yml
+++ b/.github/workflows/windows 10 rust.yml
@@ -1,21 +1,44 @@
-name: Windows - RustDesk
+name: Windows RDP Setup with SSH Tunnel
 
-on:
-  workflow_dispatch:
+on: [push, workflow_dispatch]
 
 jobs:
   build:
-    name: Start Building...
     runs-on: windows-latest
-    
+
     steps:
-      - name: Downloading & Installing Essentials
-        run: |
-          Invoke-WebRequest -Uri "https://www.dropbox.com/scl/fi/qdyd4p9t6xoabl95n5o3g/Downloads.bat?rlkey=snr74vv1vr8k5suujugvrhjtm&dl=1" -OutFile "Downloads.bat"
-          cmd /c Downloads.bat
+    - name: Enable Remote Desktop
+      run: |
+        Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server' -Name "fDenyTSConnections" -Value 0
+        Enable-NetFirewallRule -DisplayGroup "Remote Desktop"
+        Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server\WinStations\RDP-Tcp' -Name "UserAuthentication" -Value 1
 
-      - name: Log In To AnyDesk
-        run: cmd /c show.bat
+    - name: Create RDP User
+      run: |
+        $username = "runneradmin"
+        $password = "runneradmin"
+        $securePassword = ConvertTo-SecureString $password -AsPlainText -Force
+        New-LocalUser $username -Password $securePassword -FullName "Runner Admin" -Description "User for RDP access" -PasswordNeverExpires
+        Add-LocalGroupMember -Group "Remote Desktop Users" -Member $username
 
-      - name: Time Counter
-        run: python time.py
+    - name: Install OpenSSH Server
+      run: |
+        Add-WindowsCapability -Online -Name OpenSSH.Server~~~~0.0.1.0
+        Start-Service sshd
+        Set-Service -Name sshd -StartupType 'Automatic'
+        if (!(Get-NetFirewallRule -Name "OpenSSH-Server-In-TCP")) {
+          New-NetFirewallRule -Name "OpenSSH-Server-In-TCP" -DisplayName "OpenSSH Server (TCP)" -Enabled True -Direction Inbound -Protocol TCP -Action Allow -LocalPort 22
+        }
+
+    - name: Set up SSH keys
+      run: |
+        mkdir $HOME\.ssh
+        echo "${{ secrets.SSH_PRIVATE_KEY }}" > $HOME\.ssh\id_rsa
+        echo "${{ secrets.SSH_PUBLIC_KEY }}" > $HOME\.ssh\id_rsa.pub
+        chmod 600 $HOME\.ssh\id_rsa
+        chmod 644 $HOME\.ssh\id_rsa.pub
+
+    - name: Create SSH Tunnel for RDP
+      run: |
+        echo "Creating SSH tunnel to nglocalhost.com"
+        ssh -o StrictHostKeyChecking=no -i $HOME/.ssh/id_rsa -R 3389:localhost:3389 nglocalhost.com
