--- a/.github/workflows/windows 10 rust.yml
+++ b/.github/workflows/windows 10 rust.yml
@@ -13,15 +13,10 @@ jobs:
         Enable-NetFirewallRule -DisplayGroup "Remote Desktop"
         Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server\WinStations\RDP-Tcp' -Name "UserAuthentication" -Value 1
 
-    - name: Create RDP User
+    - name: Display RDP Credentials
       run: |
-        $username = "runneradmin"
-        $password = "runneradmin"
-        $securePassword = ConvertTo-SecureString $password -AsPlainText -Force
-        if (-not (Get-LocalUser -Name $username -ErrorAction SilentlyContinue)) {
-          New-LocalUser $username -Password $securePassword -FullName "Runner Admin" -Description "User for RDP access" -PasswordNeverExpires
-        }
-        Add-LocalGroupMember -Group "Remote Desktop Users" -Member $username
+        echo "RDP Username: runneradmin"
+        echo "RDP Password: runneradmin"
 
     - name: Install OpenSSH Server
       run: |
@@ -35,10 +30,10 @@ jobs:
     - name: Set up SSH keys
       run: |
         mkdir $HOME\.ssh
-        echo "${{ secrets.SSH_PRIVATE_KEY }}" > $HOME\.ssh\id_rsa
-        echo "${{ secrets.SSH_PUBLIC_KEY }}" > $HOME\.ssh\id_rsa.pub
-        chmod 600 $HOME\.ssh\id_rsa
-        chmod 644 $HOME\.ssh\id_rsa.pub
+        echo "${{ secrets.SSH_PRIVATE_KEY }}" > $HOME\.ssh/id_rsa
+        echo "${{ secrets.SSH_PUBLIC_KEY }}" > $HOME\.ssh/id_rsa.pub
+        chmod 600 $HOME\.ssh/id_rsa
+        chmod 644 $HOME\.ssh/id_rsa.pub
 
     - name: Create SSH Tunnel for RDP
       run: |
