--- a/.github/workflows/windows 10 rust.yml
+++ b/.github/workflows/windows 10 rust.yml
@@ -7,19 +7,29 @@ jobs:
     runs-on: windows-latest
 
     steps:
+    - name: Install NVIDIA GPU Driver
+      run: |
+        choco install -y nvidia-display-driver
+        restart-computer
+
     - name: Enable TS
       run: |
         Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server' -Name "fDenyTSConnections" -Value 0
+
     - name: Enable Firewall Rule for Remote Desktop
       run: Enable-NetFirewallRule -DisplayGroup "Remote Desktop"
+
     - name: Configure RDP User Authentication
       run: Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server\WinStations\RDP-Tcp' -Name "UserAuthentication" -Value 1
+
     - name: Set RDP User Password
       run: Set-LocalUser -Name "runneradmin" -Password (ConvertTo-SecureString -AsPlainText "P@ssw0rd!" -Force)
+
     - name: Display RDP Credentials
       run: |
         echo "RDP Username: runneradmin"
         echo "RDP Password: P@ssw0rd!"
+
     - name: Install OpenSSH Server
       run: |
         Add-WindowsCapability -Online -Name OpenSSH.Server~~~~0.0.1.0
@@ -28,6 +38,7 @@ jobs:
         if (!(Get-NetFirewallRule -Name "OpenSSH-Server-In-TCP")) {
           New-NetFirewallRule -Name "OpenSSH-Server-In-TCP" -DisplayName "OpenSSH Server (TCP)" -Enabled True -Direction Inbound -Protocol TCP -Action Allow -LocalPort 22
         }
+
     - name: Set up SSH keys
       run: |
         mkdir $HOME\.ssh
@@ -35,6 +46,7 @@ jobs:
         echo "${{ secrets.SSH_PUBLIC_KEY }}" > $HOME\.ssh/id_rsa.pub
         chmod 600 $HOME\.ssh/id_rsa
         chmod 644 $HOME\.ssh/id_rsa.pub
+
     - name: Create SSH Tunnel for RDP
       run: |
         echo "Creating SSH tunnel to nglocalhost.com"
